@@ -1,4 +1,4 @@
-.TH HDPARM 8 "March 2018" "Version 9.55"
+.TH HDPARM 8 "October 2018" "Version 9.57"
 
 .SH NAME
 hdparm \- get/set SATA/IDE device parameters
@@ -605,6 +605,13 @@ minutes. A value of 253 sets a vendor-defined timeout period between 8
 and 12 hours, and the value 254 is reserved.  255 is interpreted as 21
 minutes plus 15 seconds.  Note that some older drives may have very
 different interpretations of these values.
+.TP
+.I --set-sector-size
+For drives which support reconfiguring of the Logical Sector Size,
+this flag can be used to specify the new desired sector size in bytes.
+.B VERY DANGEROUS.  This most likely will scramble all data on the drive.
+The specified size must be one of 512, 520, 528, 4096, 4160, or 4224.
+Very few drives support values other than 512 and 4096.
 .TP
 .I -t
 Perform timings of device reads for benchmark and comparison purposes.
