@@ -33,6 +33,7 @@ enum {
 	ATA_OP_GET_NATIVE_MAX_EXT	= 0x78,
 	ATA_OP_SMART			= 0xb0,
 	ATA_OP_DCO			= 0xb1,
+	ATA_OP_SET_SECTOR_CONFIGURATION = 0xb2,
 	ATA_OP_SANITIZE			= 0xb4,
 	ATA_OP_ERASE_SECTORS		= 0xc0,
 	ATA_OP_READ_DMA			= 0xc8,
